--- a/css/base.css
+++ b/css/base.css
@@ -19,8 +19,8 @@
     text-decoration: none;
 }
 .titulo{
-    margin: 0.3em;
-    width: 100%;
+    margin-bottom: 0.4em;
+    text-align: center;
     font-size: 28px;
 }
 .bloco{
