--- a/css/principal.css
+++ b/css/principal.css
@@ -8,30 +8,19 @@ body{
 }
 #suBody{
     grid-area: suBody;
-    margin: 0;
-    border-radius: 50px;
-    padding: 2em;
-    height: 100vh;
-    background-color: var(--second-color);
     display: grid;
     grid-template-areas: 
     "navegacao"
     "sobre"
     "projetos"
     "ferramentas";
+    justify-content: center;
+    margin: 0;
+    border-radius: 50px;
+    padding: 1.5em 1em;
+    height: 100vh;
+    background-color: var(--second-color);
     color: var(--prime-color);
-}
-#navegacao{
-    grid-area: navegacao;
-}
-#sobre{
-    grid-area: sobre;
-}
-#projetos{
-    grid-area: projetos;
-}
-#ferramentas{
-    grid-area: ferramentas;
 }
 footer{
     grid-area: footer;
