--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 :root {
     --prime-color: #D7D2CC;
     --second-color: #0D1117;
@@ -9,19 +11,7 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-}
-.link-text{
-    color: var(--main-color);
-    text-decoration: none;
-}
-.titulo{
-    margin-bottom: 0.4em;
-    text-align: center;
-    font-size: 28px;
-}
-.bloco{
-    border-radius: 10px;
-    padding: 1em;
-    background-color: var(--prime-color);
-    color: var(--second-color);
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
