--- a/css/nav.css
+++ b/css/nav.css
@@ -11,17 +11,16 @@
     background-color: var(--prime-color);
 }
 .navegacao__item, .navegacao__item--menu{
-    background-color: var(--bg-color-inSubody);
-    color: #fff;
-    padding: 0.2em;
+    color: var(--second-color);
+    padding: 0.22em;
     font-size: 20px;
-    border-radius: 30px;
+    border-radius: 35px;
     transition: 0.4s;
 }
 .navegacao__item--menu{
-    border-radius: 5px;
+    border-radius: 10px;
 }
 .navegacao__item:active, .navegacao__item:hover, .navegacao__item--menu:hover{
-    background-color: var(--bgHover-color-inSubody);
+    background-color: var(--third-color);
     color: #fff;
 }
