Descisão de não alterar o formato das img para svg, landing page versão celular pronta, descisão de adicionar primeiro as funcionalidades do site para após isso mexer com o display para a web

--- a/css/ferramentas.css
+++ b/css/ferramentas.css
@@ -3,28 +3,22 @@
 }
 .ferramentas__itens{
     display: flex;
-    justify-content: center;
     align-items: center;
     padding: 0.5em;
-    height: 65%;
     overflow: auto;
+    margin: auto;
+    width: 70%;
 }
 .ferramentas__itens > span{
     display: flex;
     justify-content: space-around;
-    width: 100%;
+    flex-wrap: wrap;
+    gap: 1em;
 }
 .ferramentas__itens > span > img{
     width: 60px;
     transition: 0.4s;
 }
-.ferramentas__itens > span > svg{
-    width: 60px;
-    transition: 0.4s;
-}
-.ferramentas__itens > span > svg > g{
-    fill: #fff;
-} 
 .ferramentas__itens > span > img:hover{
-    transform: scale(1.1,1.1);
+    filter: drop-shadow(0 0 0.50rem var(--second-color));
 }
