--- a/css/sobre-mim.css
+++ b/css/sobre-mim.css
@@ -4,6 +4,7 @@
 }
 #sobre:hover{
     transform: translateY(-5px);
+    filter: drop-shadow(0 0 0.20rem var(--prime-color));
 }
 #sobre > .bloco{
     display: flex;
@@ -20,9 +21,14 @@
     cursor: default;
     color: var(--second-color);
 }
+#sobre > .bloco > p > a{
+    filter: drop-shadow(0 0 0.20rem var(--bgHover-color-inSubody));
+    color: var(--second-color);
+}
 #foto-perfil{
     border-radius: 20px;
     transition: 0.4s;
     vertical-align: middle;
-    box-shadow: -2px 3px 12px var(--second-color);
 }
+
+/* TODO: adicionar botão "ver mais" com js e fazer a imagem sumir e aparecer o bloco do texto */
