adicionado efeitos ao card sobre mim, menu idioma em fase inicial, menu de tópicos em fase intermediária, projetos e todos os outros foram adicionados cards quando o usário clica sobre eles. // planos futuros: adicionar para quando clicar sobre o projeto mostrar as informações sobre ele, voltar atrás com o design do menu de navegação e menu de idioma, adicionar mais conteúdo para as descrições, contar motivação, experiência e conclusão

--- a/css/suBody/nav.css
+++ b/css/suBody/nav.css
@@ -7,13 +7,13 @@
     border-radius: 30px;
     padding: 0.3em;
     width: 50%;
-    height: 40px;
+    height: 100%;
     background-color: var(--prime-color);
 }
 .navegacao__item, .navegacao__item--menu{
     color: var(--second-color);
     padding: 0.22em;
-    font-size: 20px;
+    font-size: 24px;
     border-radius: 35px;
     transition: 0.4s;
 }
@@ -21,6 +21,6 @@
     border-radius: 10px;
 }
 .navegacao__item:active, .navegacao__item:hover, .navegacao__item--menu:hover{
-    background-color: var(--third-color);
+    background-color: var(--second-color);
     color: #fff;
 }
