--- a/css/suBody/ferramentas.css
+++ b/css/suBody/ferramentas.css
@@ -20,5 +20,5 @@
     transition: 0.4s;
 }
 .ferramentas__itens > span > img:hover{
-    filter: drop-shadow(0 0 0.50rem var(--second-color));
+    filter: drop-shadow(0 0 0.30rem var(--third-color));
 }
