--- a/css/suBody/sobre-mim.css
+++ b/css/suBody/sobre-mim.css
@@ -3,8 +3,8 @@
     transition: 0.4s;
 }
 #sobre:hover{
-    transform: translateY(-5px);
-    filter: drop-shadow(0 0 0.20rem var(--prime-color));
+    transform: translateY(-3px);
+    filter: drop-shadow(0 0 0.5rem var(--prime-color));
 }
 #sobre > .bloco{
     display: flex;
@@ -14,28 +14,26 @@
 #sobre > .titulo{
     cursor: default;
 }
-#sobre > .bloco > p{
+#sobre > .bloco > #sobre__texto{
     padding-inline-start: 1em;
     font-size: 16px;
     font-weight: 500;
     cursor: default;
-    color: var(--second-color);
 }
 #foto-perfil{
     border-radius: 20px;
     transition: 0.4s;
     vertical-align: middle;
 }
-button{
+#verMaisBtn{
     background-color: transparent;
     border: none;
     font-size: 16px;
     cursor: pointer;
     text-decoration: underline;
-    color: var(--second-color);
     filter: drop-shadow(0 0 0.20rem var(--bgHover-color-inSubody));
     transition: 0.4s;
 }
-button:active, button:hover{
+#verMaisBtn:active, #verMaisBtn:hover{
     filter: drop-shadow(0 0 1em var(--second-color));
 }
