--- a/css/suBody/ferramentas.css
+++ b/css/suBody/ferramentas.css
@@ -7,7 +7,8 @@
     padding: 0.5em;
     overflow: auto;
     margin: auto;
-    width: 70%;
+    width: 80%;
+    background-color: var(--third-color);
 }
 .ferramentas__itens > span{
     display: flex;
@@ -20,5 +21,5 @@
     transition: 0.4s;
 }
 .ferramentas__itens > span > img:hover{
-    filter: drop-shadow(0 0 0.30rem var(--third-color));
+    filter: drop-shadow(0 0 0.50rem var(--prime-color));
 }
