--- a/css/suBody/principal.css
+++ b/css/suBody/principal.css
@@ -4,7 +4,7 @@ body{
     grid-template-areas: 
     "suBody"
     "footer";
-    grid-template-rows: 95% 5%;
+    grid-template-rows: 90% 10%;
     gap: 1em;
     padding-top: 3em;
     background:fixed linear-gradient(120deg , #191c23, #65758f);
@@ -41,6 +41,7 @@ footer{
     flex-direction: column;
     justify-content: space-between;
     width: 100%;
+    padding: 5em 1em;
     margin: auto;
     text-align: center;
     font-size: 1.3em;
@@ -61,10 +62,10 @@ footer > span > a > img{
     border-radius: 10px;
 }
 footer > span > a > img:hover{
-    background-color: rgba(255, 255, 255, 0.3);
+    background-color: var(--prime-color);
 }
 .link-text{
-    color: var(--main-color);
+    color: var(--prime-color);
     text-decoration: none;
 }
 .titulo{
