--- a/css/suBody/projetos.css
+++ b/css/suBody/projetos.css
@@ -24,9 +24,10 @@
     flex-direction: column;
     align-items: center;
     border-radius: 15px;
+    height: 350px;
     padding: 0.5em;
     background-color: var(--bg-color-inSubody);
-    color: #fff;
+    color: var(--prime-color);
     transition: 0.4s;
 }
 /* Ditando regras do scrollbar dentro desse bloco */
@@ -44,7 +45,7 @@
     border-radius: 2em;
 }
 #lista__projetos::-webkit-scrollbar-thumb:hover{
-    background-color: rgba( 23, 0, 20, 1);
+    background-color: var(--bg-color-inSubody);
 }
 .lista__item--titulo{
     margin: 0.2em;
@@ -64,7 +65,7 @@
     height: 200px;
     object-fit: cover;
 }
-.lista__projetos--item:hover,.filtro__item:hover{
-    color: #fff;
+.lista__projetos--item:hover{
+    color: var(--prime-color);
     background-color: var(--bgHover-color-inSubody);
 }
