--- a/css/suBody/sobre-mim.css
+++ b/css/suBody/sobre-mim.css
@@ -31,9 +31,10 @@
     font-size: 16px;
     cursor: pointer;
     text-decoration: underline;
-    filter: drop-shadow(0 0 0.20rem var(--bgHover-color-inSubody));
+    color: var(--second-color);
+    filter: drop-shadow(0 0 0.20em var(--third-color));
     transition: 0.4s;
 }
 #verMaisBtn:active, #verMaisBtn:hover{
-    filter: drop-shadow(0 0 1em var(--second-color));
+    filter: drop-shadow(0 0 1.5em var(--second-color));
 }
