--- a/css/suBody/principal.css
+++ b/css/suBody/principal.css
@@ -53,7 +53,7 @@ footer{
 footer > span{
     display: flex;
     justify-content: space-evenly;
-    margin: 1em 5em;
+    margin: 3em 5em;
 }
 footer > span > a > img{
     padding: 0.3em;
@@ -79,3 +79,11 @@ footer > span > a > img:hover{
     background-color: var(--prime-color);
     color: var(--second-color);
 }
+
+/* Definição de media-queries */
+
+@media screen and (min-width: 1080px){
+    footer{
+        width: 40%;
+    } 
+};
