--- a/css/suBody/sobre-mim.css
+++ b/css/suBody/sobre-mim.css
@@ -10,6 +10,9 @@
     display: flex;
     align-items: center;
     padding: 0.5em;
+    width: 90%;
+    max-width: 660px;
+    margin: auto;
 }
 #sobre > .titulo{
     cursor: default;
@@ -37,4 +40,12 @@
 }
 #verMaisBtn:active, #verMaisBtn:hover{
     filter: drop-shadow(0 0 1.5em var(--second-color));
+}
+
+/* Definição de media queries */
+
+@media screen and (min-width: 1080px){
+    #sobre > .bloco{
+        width: 60%;
+    }
 }
