--- a/css/suBody/ferramentas.css
+++ b/css/suBody/ferramentas.css
@@ -7,7 +7,7 @@
     padding: 0.5em;
     overflow: auto;
     margin: auto;
-    width: 80%;
+    max-width: 400px;
     background-color: var(--third-color);
 }
 .ferramentas__itens > span{
@@ -22,4 +22,11 @@
 }
 .ferramentas__itens > span > img:hover{
     filter: drop-shadow(0 0 0.50rem var(--prime-color));
+}
+/* TODO: Media query que define o padrão de tamanho para a barra de ferramentas */
+
+@media screen and (max-width: 400px) {
+    .ferramentas__itens{
+        max-width: 300px;
+    }
 }
