--- a/css/suBody/principal.css
+++ b/css/suBody/principal.css
@@ -33,15 +33,15 @@ body{
     width: 100%;
     height: 100%;
     background-color: black;
-    opacity: 70%;
+    opacity: 80%;
 }
 footer{
     grid-area: footer;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 100%;
-    padding: 5em 1em;
+    padding: 2em 1em;
+    min-width: 370px;
     margin: auto;
     text-align: center;
     font-size: 1.3em;
@@ -53,7 +53,7 @@ footer{
 footer > span{
     display: flex;
     justify-content: space-evenly;
-    margin: 3em 5em;
+    margin: 2em 1em;
 }
 footer > span > a > img{
     padding: 0.3em;
@@ -79,11 +79,3 @@ footer > span > a > img:hover{
     background-color: var(--prime-color);
     color: var(--second-color);
 }
-
-/* Definição de media-queries */
-
-@media screen and (min-width: 1080px){
-    footer{
-        width: 40%;
-    } 
-};
