--- a/css/suBody/projetos.css
+++ b/css/suBody/projetos.css
@@ -1,71 +1,102 @@
 #projetos{
     grid-area: projetos;
-}
-#projetos > #lista{
-    display: grid;
-    grid-template-areas: 
-    "lista__projetos";
-    grid-template-rows: auto;
-}
-#projetos > .bloco{
-    padding: 0.5em;
-}
-#lista__projetos{
-    grid-area: lista__projetos;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 1em;
-    overflow: auto;
-    height: 380px;
-}
-.lista__projetos--item{
+    scroll-snap-align: start;
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 2em;
+}
+.projetos__item{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    text-align: center;
+    justify-content: space-around;
+    width: 100%;
+    gap: 3em;
+    padding: 1em;
     border-radius: 15px;
-    height: 350px;
-    padding: 0.5em;
-    background-color: var(--bg-color-inSubody);
-    color: var(--prime-color);
-    transition: 0.4s;
+    background: linear-gradient(55deg, #2020205d 0%, #ffffff33 100%);
+    transition: .6s;
 }
-/* Ditando regras do scrollbar dentro desse bloco */
-#lista__projetos::-webkit-scrollbar{
-    width: 1em;
-    height: 1em;
+.projetos__item:hover{
+    background-color:  #ffc86f43;
 }
-#lista__projetos::-webkit-scrollbar-track{
-    background: var(--bg-color-inSubody);
-    border-radius: 2em;
-    transition: 0.4s;
-}
-#lista__projetos::-webkit-scrollbar-thumb{
-    background-color: var(--bgHover-color-inSubody);
-    border-radius: 2em;
-}
-#lista__projetos::-webkit-scrollbar-thumb:hover{
-    background-color: var(--bg-color-inSubody);
-}
-.lista__item--titulo{
-    margin: 0.2em;
-    font-weight: bolder;
-}
-.lista__projetos--item > span{
-    font-size: 18px;
-    text-align: center;
-    margin: 0.2em;
-}
-.lista__item--titulo{
-    text-align: center;
-}
-.lista__projetos--item > img{
+.projetos__item > img{
+    max-width: 510px;
+    width: 100%;
+    height: 360px;
     border-radius: 10px;
-    width: 300px;
-    height: 200px;
     object-fit: cover;
+    border: 5px solid #ffffff2b;
 }
-.lista__projetos--item:hover{
+.projetos__item--desc{
+    width: 300px;
+    font-size: 22px;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+.projetos__item--title{
+    font-size: 26px;
+    font-weight: 800;
+    margin-bottom: 5px;
+}
+.projetos__item--desc .techs{
+    color: var(--second-color);
+    font: 700;
+    margin-bottom: 5px;
+}
+.projetos__item--desc .text{
+    font-size: 20px;
+    margin-bottom: 5px;
+}
+
+.projetos__item--desc .links{
+    display: inline;
+    margin-bottom: 5px;
+}
+
+.projetos__item--btn{
+    padding: 10px 15px;
+    background-color: var(--second-color);
+    border-color: transparent;
+    border-radius: 30px;
     color: var(--prime-color);
-    background-color: var(--bgHover-color-inSubody);
+    font-size: .7em;
+    cursor: pointer;
+    transition: .4s;
+}
+.projetos__item--btn:hover{
+    scale: .9.9;
+}
+
+.verMais{
+    padding: 15px 20px;
+    font-size: .9em;
+    font-weight: 700;
+    color: var(--second-color);
+    background-color: var(--prime-color);
+}
+
+@media screen and (width <= 931px ){
+    .projetos__item{
+        min-width: 540px;
+        width: 70%;
+        margin: auto;
+    }
+}
+
+@media screen and (width <= 600px )  {
+    .projetos__item{
+        min-width: unset;
+        width: 100%;
+        margin: unset;
+    }
+    .projetos__item > img{
+        width: 100%;
+        height: 220px;
+    }
 }
