--- a/css/index/sobre-mim.css
+++ b/css/index/sobre-mim.css
@@ -57,7 +57,7 @@
         height: 60vh;
         width: 100%;
         font-size: 22px;
-        gap: 5em;
+        gap: 1em;
     }
     #foto-perfil{
         height: 13rem;
@@ -75,7 +75,7 @@
         height: 50vh;
         width: 100%;
         font-size: 20px;
-        gap: .5em;
+        /* gap: .5em; */
     }
     .sobre__projetos{
         margin-top: 5.5em;
@@ -93,7 +93,6 @@
         width: 100%;
         font-size: 22px;
         gap: .5em;
-        margin-bottom: 2px;
     }
     .sobre__projetos{
         margin-top: 0;
